Espectros normalizados con ruido blanco (Balanceados)

--- a/GaiaXpy/random_forest/with_balanced_data/Random_Forest_SG.ipynb
+++ b/GaiaXpy/random_forest/with_balanced_data/Random_Forest_SG.ipynb
@@ -25,9 +25,9 @@
    "outputs": [],
    "source": [
     "#Cargar el archivo que contiene los datos de los dos tipos de espectros\n",
-    "# (Simbioticas-1, Nebulosas-2)\n",
+    "# (Simbioticas-1, Gigantes Rojas-3)\n",
     "\n",
-    "data = pd.read_csv('../../Data/DR3/espectros_normalizados_SN.csv')"
+    "data = pd.read_csv('../../../Data/DR3/espectros_normalizados_SG.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión: 0.91 (+/- 0.07)\n"
+      "Precisión: 1.00 (+/- 0.00)\n"
      ]
     }
    ],
@@ -110,8 +110,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[32  5]\n",
-      " [ 8 78]]\n"
+      "[[  29    7]\n",
+      " [   0 2427]]\n"
      ]
     }
    ],
@@ -135,16 +135,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's kappa:  0.7544156043618492\n",
+      "Cohen's kappa:  0.8908845810628643\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1     0.8000    0.8649    0.8312        37\n",
-      "           2     0.9398    0.9070    0.9231        86\n",
+      "           1     1.0000    0.8056    0.8923        36\n",
+      "           3     0.9971    1.0000    0.9986      2427\n",
       "\n",
-      "    accuracy                         0.8943       123\n",
-      "   macro avg     0.8699    0.8859    0.8771       123\n",
-      "weighted avg     0.8977    0.8943    0.8954       123\n",
+      "    accuracy                         0.9972      2463\n",
+      "   macro avg     0.9986    0.9028    0.9454      2463\n",
+      "weighted avg     0.9972    0.9972    0.9970      2463\n",
       "\n"
      ]
     }
@@ -152,7 +152,7 @@
    "source": [
     "print(\"Cohen's kappa: \", cohen_kappa_score(y_test,y_pred))\n",
     "print()\n",
-    "print(classification_report(y_test, y_pred, labels=[1,2], digits=4))"
+    "print(classification_report(y_test, y_pred, labels=[1,3], digits=4))"
    ],
    "metadata": {
     "collapsed": false
@@ -166,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8943089430894309\n"
+      "Accuracy: 0.9971579374746244\n"
      ]
     }
    ],
@@ -174,6 +174,22 @@
     "# Calculamos la precisión del modelo\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print('Accuracy:', accuracy)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "#Realizar combinaciones de estrellas:\n",
+    "#Simbioticas-Nebulosas\n",
+    "#Simbioticas-Gigantes\n",
+    "#Nebulosas-Gigantes\n",
+    "\n",
+    "#Aplicación de metricas para cada conjunto"
    ],
    "metadata": {
     "collapsed": false
