--- a/GaiaXpy/random_forest/with_balanced_data/Random_Forest_SN.ipynb
+++ b/GaiaXpy/random_forest/with_balanced_data/Random_Forest_SN.ipynb
@@ -25,9 +25,9 @@
    "outputs": [],
    "source": [
     "#Cargar el archivo que contiene los datos de los dos tipos de espectros\n",
-    "# (Nebulosas-2, Gigantes Rojas-3)\n",
+    "# (Simbioticas-1, Nebulosas-2)\n",
     "\n",
-    "data = pd.read_csv('../../Data/DR3/espectros_normalizados_NG.csv')"
+    "data = pd.read_csv('../../../Data/DR3/espectros_normalizados_SN.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión: 0.99 (+/- 0.01)\n"
+      "Precisión: 0.91 (+/- 0.07)\n"
      ]
     }
    ],
@@ -110,8 +110,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  63   23]\n",
-      " [   1 2422]]\n"
+      "[[32  5]\n",
+      " [ 8 78]]\n"
      ]
     }
    ],
@@ -135,16 +135,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's kappa:  0.8351790924667846\n",
+      "Cohen's kappa:  0.7544156043618492\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           2     0.9844    0.7326    0.8400        86\n",
-      "           3     0.9906    0.9996    0.9951      2423\n",
+      "           1     0.8000    0.8649    0.8312        37\n",
+      "           2     0.9398    0.9070    0.9231        86\n",
       "\n",
-      "    accuracy                         0.9904      2509\n",
-      "   macro avg     0.9875    0.8661    0.9175      2509\n",
-      "weighted avg     0.9904    0.9904    0.9898      2509\n",
+      "    accuracy                         0.8943       123\n",
+      "   macro avg     0.8699    0.8859    0.8771       123\n",
+      "weighted avg     0.8977    0.8943    0.8954       123\n",
       "\n"
      ]
     }
@@ -152,7 +152,7 @@
    "source": [
     "print(\"Cohen's kappa: \", cohen_kappa_score(y_test,y_pred))\n",
     "print()\n",
-    "print(classification_report(y_test, y_pred, labels=[2,3], digits=4,zero_division='warn'))"
+    "print(classification_report(y_test, y_pred, labels=[1,2], digits=4))"
    ],
    "metadata": {
     "collapsed": false
@@ -166,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9904344360302909\n"
+      "Accuracy: 0.8943089430894309\n"
      ]
     }
    ],
