--- a/GaiaXpy/random_forest/with_balanced_data/Random_Forest_SNG.ipynb
+++ b/GaiaXpy/random_forest/with_balanced_data/Random_Forest_SNG.ipynb
@@ -28,7 +28,7 @@
     "#Cargar el archivo que contiene los datos de los tres tipos de espectros\n",
     "# (Simbioticas-1, Nebulosas-2, Gigantes Rojas-3) con DATOS COMPLETOS\n",
     "\n",
-    "data = pd.read_csv('../../Data/DR3/espectros_normalizados_SNG.csv')"
+    "data = pd.read_csv('../../../Data/DR3/espectros_normalizados_SNG.csv')"
    ],
    "metadata": {
     "collapsed": false
