--- a/GaiaXpy/random_forest/with_balanced_data/Random_Forest_NG.ipynb
+++ b/GaiaXpy/random_forest/with_balanced_data/Random_Forest_NG.ipynb
@@ -25,9 +25,9 @@
    "outputs": [],
    "source": [
     "#Cargar el archivo que contiene los datos de los dos tipos de espectros\n",
-    "# (Simbioticas-1, Gigantes Rojas-3)\n",
+    "# (Nebulosas-2, Gigantes Rojas-3)\n",
     "\n",
-    "data = pd.read_csv('../../Data/DR3/espectros_normalizados_SG.csv')"
+    "data = pd.read_csv('../../../Data/DR3/espectros_normalizados_NG.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión: 1.00 (+/- 0.00)\n"
+      "Precisión: 0.99 (+/- 0.01)\n"
      ]
     }
    ],
@@ -110,8 +110,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  29    7]\n",
-      " [   0 2427]]\n"
+      "[[  63   23]\n",
+      " [   1 2422]]\n"
      ]
     }
    ],
@@ -135,16 +135,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's kappa:  0.8908845810628643\n",
+      "Cohen's kappa:  0.8351790924667846\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1     1.0000    0.8056    0.8923        36\n",
-      "           3     0.9971    1.0000    0.9986      2427\n",
+      "           2     0.9844    0.7326    0.8400        86\n",
+      "           3     0.9906    0.9996    0.9951      2423\n",
       "\n",
-      "    accuracy                         0.9972      2463\n",
-      "   macro avg     0.9986    0.9028    0.9454      2463\n",
-      "weighted avg     0.9972    0.9972    0.9970      2463\n",
+      "    accuracy                         0.9904      2509\n",
+      "   macro avg     0.9875    0.8661    0.9175      2509\n",
+      "weighted avg     0.9904    0.9904    0.9898      2509\n",
       "\n"
      ]
     }
@@ -152,7 +152,7 @@
    "source": [
     "print(\"Cohen's kappa: \", cohen_kappa_score(y_test,y_pred))\n",
     "print()\n",
-    "print(classification_report(y_test, y_pred, labels=[1,3], digits=4))"
+    "print(classification_report(y_test, y_pred, labels=[2,3], digits=4,zero_division='warn'))"
    ],
    "metadata": {
     "collapsed": false
@@ -166,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9971579374746244\n"
+      "Accuracy: 0.9904344360302909\n"
      ]
     }
    ],
@@ -174,22 +174,6 @@
     "# Calculamos la precisión del modelo\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print('Accuracy:', accuracy)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "#Realizar combinaciones de estrellas:\n",
-    "#Simbioticas-Nebulosas\n",
-    "#Simbioticas-Gigantes\n",
-    "#Nebulosas-Gigantes\n",
-    "\n",
-    "#Aplicación de metricas para cada conjunto"
    ],
    "metadata": {
     "collapsed": false
