Cambios Random_Forest_Validation

--- a/Simulados/Random_Forest.ipynb
+++ b/Simulados/Random_Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -32,12 +32,12 @@
     "# (Simbioticas-1, Nebulosas Planetarias-2)\n",
     "# DESPUÉS DEL BALANCEO DE DATOS (1000 APROX. POR CADA UNO)\n",
     "\n",
-    "data = pd.read_csv('../Data/Espectros_Normalizados_SN.csv')"
+    "data = pd.read_csv('../Simulados/RandomForest.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión: 0.83 (+/- 0.26)\n"
+      "Precisión: 0.96 (+/- 0.19)\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -108,8 +108,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 6  1]\n",
-      " [ 3 10]]\n"
+      "[[ 25   0]\n",
+      " [  1 229]]\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -130,16 +130,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's kappa:  0.5876288659793814\n",
+      "Cohen's kappa:  0.9782144382742418\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1     0.6667    0.8571    0.7500         7\n",
-      "           2     0.9091    0.7692    0.8333        13\n",
+      "           1     0.9615    1.0000    0.9804        25\n",
+      "           2     1.0000    0.9957    0.9978       230\n",
       "\n",
-      "    accuracy                         0.8000        20\n",
-      "   macro avg     0.7879    0.8132    0.7917        20\n",
-      "weighted avg     0.8242    0.8000    0.8042        20\n",
+      "    accuracy                         0.9961       255\n",
+      "   macro avg     0.9808    0.9978    0.9891       255\n",
+      "weighted avg     0.9962    0.9961    0.9961       255\n",
       "\n"
      ]
     }
