--- a/GaiaXpy/random_forest/with_balanced_data/Random_Forest_Sampler_SNG.ipynb
+++ b/GaiaXpy/random_forest/with_balanced_data/Random_Forest_Sampler_SNG.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Entrenamos el modelo utilizando el conjunto de entrenamiento\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "#Obtención del número de árboles de clasificación\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# imprimir los resultados de la búsqueda en cuadrícula\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -152,6 +152,21 @@
     "#Matriz de confusión\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(cm)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "# Save as CSV\n",
+    "with open(\"cm_rf_balanced.csv\", \"w\", newline=\"\") as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerows(cm)"
    ],
    "metadata": {
     "collapsed": false
