--- a/GaiaXpy/Bayesiano/Bayesiano_Unbalanced_Data.ipynb
+++ b/GaiaXpy/Bayesiano/Bayesiano_Unbalanced_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -12,13 +12,13 @@
     "import numpy as np\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, f1_score, recall_score\n",
     "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# Cargamos los datos\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# Dividimos los datos en conjuntos de entrenamiento y prueba\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -102,13 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Accuracy: 0.8335949764521193\n",
+      "F1-Score: 0.5984097210586347\n",
+      "Recall-Score: 0.7746993975675031\n",
       "Confusion matrix:\n",
       " [[  32   10    4]\n",
       " [   8   68   10]\n",
@@ -122,8 +124,12 @@
     "# Predicción y evaluación del modelo\n",
     "y_pred = nb.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
+    "f1_score2 = f1_score(y_test, y_pred, average='macro')\n",
+    "recall_score2 = recall_score(y_test, y_pred, average='macro')\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)\n",
+    "print(\"F1-Score:\", f1_score2)\n",
+    "print(\"Recall-Score:\", recall_score2)\n",
     "print(\"Confusion matrix:\\n\", cm)"
    ],
    "metadata": {
@@ -132,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -160,6 +166,37 @@
     "print()\n",
     "print(classification_report(y_test, y_pred, labels=[1,2,3], digits=4))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "report = classification_report(y_test, y_pred, digits=4)\n",
+    "print(report)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
