test selected NP candidate stars using RNA and RF
T-SNE algorithm

test NP candidate stars

re-execute models and test with candidate stars

re-execute models and test with candidate stars

others stars

improves

refactor

suspected symbiotic stars

dataset 15000

reexecution of algorithms

refactor how to build datasets

--- a/GaiaXpy/Bayesiano/Bayesiano_Balanced_Data.ipynb
+++ b/GaiaXpy/Bayesiano/Bayesiano_Balanced_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Cargamos los datos\n",
-    "data = pd.read_csv('../../Data/DR3/espectros_normalizados_balanceados_SNG.csv')\n",
+    "data = pd.read_csv('../../new/datasets/balanced.csv', header=None)\n",
     "\n",
     "# Separamos las características y la variable objetivo\n",
     "X = data.drop(data.columns[-1], axis=1)\n",
@@ -60,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Dividimos los datos en conjuntos de entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
     "# Creamos el modelo de clasificación de Naive Bayes\n",
     "nb = GaussianNB()\n",
@@ -81,13 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión del modelo: 0.7677100494233937\n"
+      "Precisión del modelo: 0.8\n"
      ]
     }
    ],
@@ -102,17 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7677100494233937\n",
+      "Accuracy: 0.8\n",
       "Confusion matrix:\n",
-      " [[149  20  46]\n",
-      " [ 22 158  25]\n",
-      " [ 27   1 159]]\n"
+      " [[153  18  29]\n",
+      " [ 28 154  18]\n",
+      " [ 26   1 173]]\n"
      ]
     }
    ],
@@ -132,23 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's kappa:  0.6523312778766239\n",
+      "Cohen's kappa:  0.7\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1     0.7525    0.6930    0.7215       215\n",
-      "           2     0.8827    0.7707    0.8229       205\n",
-      "           3     0.6913    0.8503    0.7626       187\n",
+      "           1     0.7391    0.7650    0.7518       200\n",
+      "           2     0.8902    0.7700    0.8257       200\n",
+      "           3     0.7864    0.8650    0.8238       200\n",
       "\n",
-      "    accuracy                         0.7677       607\n",
-      "   macro avg     0.7755    0.7713    0.7690       607\n",
-      "weighted avg     0.7776    0.7677    0.7684       607\n",
+      "    accuracy                         0.8000       600\n",
+      "   macro avg     0.8052    0.8000    0.8005       600\n",
+      "weighted avg     0.8052    0.8000    0.8005       600\n",
       "\n"
      ]
     }
@@ -160,6 +160,15 @@
     "print()\n",
     "print(classification_report(y_test, y_pred, labels=[1,2,3], digits=4))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
