--- a/GaiaXpy/Bayesiano/Bayesiano_Unbalanced_Data.ipynb
+++ b/GaiaXpy/Bayesiano/Bayesiano_Unbalanced_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Cargamos los datos\n",
-    "data = pd.read_csv('../../Data/DR3/espectros_normalizados_SNG.csv')\n",
+    "data = pd.read_csv('../../new/datasets/unbalanced.csv', header=None)\n",
     "\n",
     "# Separamos las características y la variable objetivo\n",
     "X = data.drop(data.columns[-1], axis=1)\n",
@@ -34,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión: 0.85 (+/- 0.01)\n"
+      "Precisión: 0.83 (+/- 0.04)\n"
      ]
     }
    ],
@@ -60,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Dividimos los datos en conjuntos de entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
     "# Creamos el modelo de clasificación de Naive Bayes\n",
     "nb = GaussianNB()\n",
@@ -81,13 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión del modelo: 0.8335949764521193\n"
+      "Precisión del modelo: 0.8531645569620253\n"
      ]
     }
    ],
@@ -102,17 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8335949764521193\n",
+      "Accuracy: 0.8531645569620253\n",
       "Confusion matrix:\n",
-      " [[  32   10    4]\n",
-      " [   8   68   10]\n",
-      " [ 374   18 2024]]\n"
+      " [[ 32   4   4]\n",
+      " [ 11  93  11]\n",
+      " [ 27   1 212]]\n"
      ]
     }
    ],
@@ -132,23 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's kappa:  0.299017126958544\n",
+      "Cohen's kappa:  0.7380965990282937\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1     0.0773    0.6957    0.1391        46\n",
-      "           2     0.7083    0.7907    0.7473        86\n",
-      "           3     0.9931    0.8377    0.9088      2416\n",
+      "           1     0.4571    0.8000    0.5818        40\n",
+      "           2     0.9490    0.8087    0.8732       115\n",
+      "           3     0.9339    0.8833    0.9079       240\n",
       "\n",
-      "    accuracy                         0.8336      2548\n",
-      "   macro avg     0.5929    0.7747    0.5984      2548\n",
-      "weighted avg     0.9670    0.8336    0.8895      2548\n",
+      "    accuracy                         0.8532       395\n",
+      "   macro avg     0.7800    0.8307    0.7877       395\n",
+      "weighted avg     0.8900    0.8532    0.8648       395\n",
       "\n"
      ]
     }
@@ -160,6 +160,15 @@
     "print()\n",
     "print(classification_report(y_test, y_pred, labels=[1,2,3], digits=4))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
