--- a/GaiaXpy/MSV/MSV_Balanced_Data.ipynb
+++ b/GaiaXpy/MSV/MSV_Balanced_Data.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Cargamos los datos\n",
-    "data = pd.read_csv('../../Data/DR3/espectros_normalizados_balanceados_SNG.csv')\n",
+    "data = pd.read_csv(\"../../new/datasets/balanced.csv\", header=None)\n",
     "X = data.drop(data.columns[-1], axis=1)\n",
     "y = data.iloc[:, -1]"
    ],
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# Dividimos los datos en conjuntos de entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
     "# Creamos el modelo de clasificación SVM\n",
     "#svm = SVC(kernel='rbf', C=1, gamma='auto') ##REVISA LOS KERNELS\n",
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión del modelo: 0.9209225700164745\n"
+      "Precisión del modelo: 0.9383333333333334\n"
      ]
     }
    ],
@@ -97,11 +97,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9209225700164745\n",
+      "Accuracy: 0.9383333333333334\n",
       "Confusion matrix:\n",
-      " [[206   7   2]\n",
-      " [  9 176  20]\n",
-      " [  3   7 177]]\n"
+      " [[189   9   2]\n",
+      " [ 13 180   7]\n",
+      " [  3   3 194]]\n"
      ]
     }
    ],
@@ -127,17 +127,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's kappa:  0.8812791342047788\n",
+      "Cohen's kappa:  0.9075\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1     0.9450    0.9581    0.9515       215\n",
-      "           2     0.9263    0.8585    0.8911       205\n",
-      "           3     0.8894    0.9465    0.9171       187\n",
+      "           1     0.9220    0.9450    0.9333       200\n",
+      "           2     0.9375    0.9000    0.9184       200\n",
+      "           3     0.9557    0.9700    0.9628       200\n",
       "\n",
-      "    accuracy                         0.9209       607\n",
-      "   macro avg     0.9202    0.9211    0.9199       607\n",
-      "weighted avg     0.9216    0.9209    0.9205       607\n",
+      "    accuracy                         0.9383       600\n",
+      "   macro avg     0.9384    0.9383    0.9382       600\n",
+      "weighted avg     0.9384    0.9383    0.9382       600\n",
       "\n"
      ]
     }
@@ -149,6 +149,15 @@
     "print()\n",
     "print(classification_report(y_test, y_pred, labels=[1,2,3], digits=4))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
