--- a/GaiaXpy/MSV/MSV_Unbalanaced_Data.ipynb
+++ b/GaiaXpy/MSV/MSV_Unbalanaced_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Cargamos los datos\n",
-    "data = pd.read_csv('../../Data/DR3/espectros_normalizados_SNG.csv')\n",
+    "data = pd.read_csv(\"../../new/datasets/unbalanced.csv\", header=None)\n",
     "X = data.drop(data.columns[-1], axis=1)\n",
     "y = data.iloc[:, -1]"
    ],
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Dividimos los datos en conjuntos de entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
     "# Creamos el modelo de clasificación SVM\n",
     "svm = SVC(kernel='rbf', C=1, gamma='auto') ##REVISA LOS KERNELS\n",
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precisión del modelo: 0.9729199372056515\n"
+      "Precisión del modelo: 0.8886075949367088\n"
      ]
     }
    ],
@@ -75,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9729199372056515\n",
+      "Accuracy: 0.8886075949367088\n",
       "Confusion matrix:\n",
-      " [[   2    9   35]\n",
-      " [   1   62   23]\n",
-      " [   0    1 2415]]\n"
+      " [[ 22   7  11]\n",
+      " [  4  93  18]\n",
+      " [  3   1 236]]\n"
      ]
     }
    ],
@@ -105,23 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's kappa:  0.6560838487811176\n",
+      "Cohen's kappa:  0.7817953546767106\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1     0.6667    0.0435    0.0816        46\n",
-      "           2     0.8611    0.7209    0.7848        86\n",
-      "           3     0.9765    0.9996    0.9879      2416\n",
+      "           1     0.7586    0.5500    0.6377        40\n",
+      "           2     0.9208    0.8087    0.8611       115\n",
+      "           3     0.8906    0.9833    0.9347       240\n",
       "\n",
-      "    accuracy                         0.9729      2548\n",
-      "   macro avg     0.8348    0.5880    0.6181      2548\n",
-      "weighted avg     0.9671    0.9729    0.9647      2548\n",
+      "    accuracy                         0.8886       395\n",
+      "   macro avg     0.8567    0.7807    0.8111       395\n",
+      "weighted avg     0.8860    0.8886    0.8832       395\n",
       "\n"
      ]
     }
@@ -133,6 +133,15 @@
     "print()\n",
     "print(classification_report(y_test, y_pred, labels=[1,2,3], digits=4))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
